# MI-PRC

./: .gitignore
raytracer/: CMakeLists.txt  bmp.cpp  bmp.h  circle.h  light.cpp  light.h  main.cpp  obj.cpp  obj.h  obj.hpp  rand.h  sample.lit  sample.mtl  sample.sph  scene.cpp  scene.h  sphere.h  trace.cpp  trace.h  triangle.h  triangle.hpp  vec3.h
raytracer_cpu/: bmp.cpp  color.h  common.cpp  common.h  job.cpp  job.h  kernel.cpp  kernel.h  light.cpp  main.cpp  obj.cpp  obj.h  rand.h  raytracer_cuda.sln  scene.cpp  trace.cpp  trace.h  vec3.h
raytracer_cuda/: Makefile  common.cu  common.cuh  job.cu  job.cuh  kernel.cu  kernel.cuh  light.cu  light.cuh  main.cu  obj.cu  obj.cuh  rand.cuh  raytracer_cuda.vcxproj  scene.cu  scene.cuh  sphere.cuh  star.sh  trace.cu  trace.cuh  triangle.cuh  vec3.cuh
raytracer_cuda/sample/: sample.lit  sample.mtl
raytracer_rec_cpu/: Makefile  bmp.h  common.cpp  common.h  job.cpp  job.h  kernel.cpp  kernel.h  light.cpp  light.h  main.cpp  obj.cpp  rand.cpp  rand.h  scene.cpp  scene.h  sphere.h  trace.cpp  trace.h  triangle.h
raytracer_rec_cpu/sample/: sample.mtl  sample.sph
raytracer_rec_cuda/: common.cuh  job.cu  kernel.cu  kernel.cuh  main.cu  obj.cu  rand.cuh  scene.cu  trace.cuh
